# cTest

./: .gitignore  .gitmodules  CMakeLists.txt  Readme.md  TODO.md
.github/workflows/: build_debug.yml
VST2_SDK/: README.md
ano_module/: CMakeLists.txt
ano_module/ano_gui/: ano_gui.cpp  ano_gui.h
ano_module/ano_gui/components/: AnoSlider.cpp  AnoSlider.h
ano_module/ano_gui/lookAndFeels/: ano_laf_1.cpp  ano_laf_1.h
ano_module/ano_gui/other/: ano_graphics_header.cpp  ano_graphics_header.h
ano_module/ano_gui/views/: VWpSimpleResonator.cpp  VWpSimpleResonator.h  VWpSmithAngellResonator.cpp  VWpSmithAngellResonator.h
ano_module/ano_processor/: ano_processor.cpp  ano_processor.h
ano_module/ano_processor/filters/: PWpSimpleResonator.cpp  PWpSimpleResonator.h  PWpSmithAngellResonator.cpp  PWpSmithAngellResonator.h
ano_module/ano_processor/gain/: ano_gain.cpp  ano_gain.h
ano_module/ano_processor/parameters/: ano_parameter_header.cpp  ano_parameter_header.h
plug-Example/plug/: CMakeLists.txt
plug-Example/plug/scripts/: builddebug.sh  buildrelease.sh  clean.sh  runtests.sh
plug-Example/plug/src/: PluginEditor.cpp  PluginEditor.h  PluginParameters.cpp  PluginParameters.h  PluginProcessor.cpp  PluginProcessor.h
plug-Example/plug/tests/: Main.cpp  TestOne.cpp
scripts/: build.py  build.sh  clean.py  clean.sh  cleanWindows.ps1  cmake.py  functions.py  plugs.py  runcmake.sh  runcmakeLinux.sh  runcmakeWindows.ps1  runtests.sh  runtestsLinux.sh  runtestsWindows.ps1  switch.py  tests.py
